add and style section with photo and short desctiption

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css"> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,5 +14,26 @@
       <h1>Anastasiia Riabets</h1>
     </div>
   </header>
+  <section id="short_disc">
+    <div>
+      <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="300px">
+    </div>
+    <div>
+      <ul>
+        <li>
+          <span class="emoji">&#127758;</span> 
+          Portland, OR
+        </li>
+        <li>
+          <span class="emoji">&#128218;</span>
+          Computer Science AA
+        </li>
+        <li>
+          <span class="emoji">&#10084;</span>
+          Sudoku, Traveling, Coding, Piano
+        </li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
