add and style projects section

--- a/index.html
+++ b/index.html
@@ -35,5 +35,28 @@
       </ul>
     </div>
   </section>
+  <section id="projects">
+    <div>
+      <a href="https://anastasiia-ria.github.io/animal-shelter/">
+        <h3>Animal Shelter</h3>
+        <img src="img/animal-shelter.jpg" alt="Animal Shelter Website">
+      </a>
+      <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages. It can be accessed at <a href="https://anastasiia-ria.github.io/animal-shelter/">GitHub Page</a>.</p>
+    </div>
+    <div>
+      <a href="https://anastasiia-ria.github.io/interior-design/">
+        <h3>Interior Design</h3>
+        <img src="img/interior-design.jpg" alt="Interior Design Website">
+      </a>
+      <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages. It can be accessed at <a href="https://anastasiia-ria.github.io/interior-design/">GitHub Page</a>.</p>
+    </div>
+    <div>
+      <a href="https://anastasiia-ria.github.io/pet/">
+        <h3>Pets</h3>
+        <img src="img/pet.jpg" alt="Pets Website"> 
+      </a>
+      <p>Pets website describes mine and Riley's pets. It uses HTML and CSS languages. It can be accessed at <a href="https://anastasiia-ria.github.io/pet/">GitHub Page</a>.</p>
+    </div>
+  </section>
 </body>
 </html>
