--- a/index.html
+++ b/index.html
@@ -35,5 +35,31 @@
       </ul>
     </div>
   </section>
+  <section id="projects">
+    <div id="shelter">
+      <div class="overlay">
+        <a href="https://anastasiia-ria.github.io/animal-shelter/">
+          <h3>Animal Shelter</h3>
+          <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages.</p>
+        </a>
+      </div>
+    </div>
+    <div id="design">
+      <div class="overlay">
+        <a href="https://anastasiia-ria.github.io/interior-design/">
+          <h3>Interior Design</h3>
+          <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
+        </a>
+      </div>
+    </div>
+    <div id="pets">
+      <div class="overlay">
+        <a href="https://anastasiia-ria.github.io/pet/">
+          <h3>Pets</h3>
+          <p>Pets website describes mine and Riley's pets, provides their pictures and some facts. It uses HTML and CSS languages.</p>
+        </a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
