--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 </head>
 <body>
   <header>
-    <div class="overlay">
+    <div class="nav-bar">
       <h1>Anastasiia Riabets</h1>
+      <ul>
+        <li>Home</li>
+        <li>Projects</li>
+        <li>About Me</li>
+        <li>Contact</li>
+      </ul>
     </div>
   </header>
   <section id="short_disc">
     <div>
-      <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="300px">
+      <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="100%" 
+      max-width="400px">
     </div>
     <div>
       <ul>
