--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
   <link rel="stylesheet" href="css/styles.css"> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <title>Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="nav-bar">
       <h1>Anastasiia Riabets</h1>
       <ul>
-        <li>Home</li>
-        <li>Projects</li>
-        <li>About Me</li>
-        <li>Contact</li>
+        <li>
+          <a href="#short_disc">Home</a>
+        </li>
+        <li>
+          <a href="#projects">Projects</a>
+        </li>
+        <li>
+          <a href="#aboutme">About Me</a>
+        </li>
+        <li>
+          <a href="#contacts">Contact</a>
+        </li>
       </ul>
     </div>
   </header>
@@ -25,21 +32,8 @@
       <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="100%" 
       max-width="400px">
     </div>
-    <div>
-      <ul>
-        <li>
-          <span class="emoji">&#127758;</span> 
-          Portland, OR
-        </li>
-        <li>
-          <span class="emoji">&#128218;</span>
-          Computer Science AA
-        </li>
-        <li>
-          <span class="emoji">&#10084;</span>
-          Sudoku, Traveling, Coding, Piano
-        </li>
-      </ul>
+    <div class="terminal">
+      <p>> Hi!<br>> My name is Anastasiia<br>> I am a student at Epicodus<br>> Here are some things<br>> about me <span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span></p>
     </div>
   </section>
   <section id="projects">
