--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#aboutme">About Me</a>
         </li>
         <li>
-          <a href="#contacts">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -37,22 +37,25 @@
     </div>
   </section>
   <section id="projects">
-    <div id="shelter">
-      <div class="overlay">
-        <a href="https://anastasiia-ria.github.io/animal-shelter/">
-          <h3>Animal Shelter</h3>
-          <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages.</p>
-        </a>
+    <div class="container">
+      <div id="shelter">
+        <div class="overlay">
+          <a href="https://anastasiia-ria.github.io/animal-shelter/">
+            <h3>Animal Shelter</h3>
+            <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages.</p>
+          </a>
+        </div>
+      </div>
+      <div id="design">
+        <div class="overlay">
+          <a href="https://anastasiia-ria.github.io/interior-design/">
+            <h3>Interior Design</h3>
+            <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
+          </a>
+        </div>
       </div>
     </div>
-    <div id="design">
-      <div class="overlay">
-        <a href="https://anastasiia-ria.github.io/interior-design/">
-          <h3>Interior Design</h3>
-          <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
-        </a>
-      </div>
-    </div>
+    
     <div id="pets">
       <div class="overlay">
         <a href="https://anastasiia-ria.github.io/pet/">
@@ -62,5 +65,46 @@
       </div>
     </div>
   </section>
+  <section id="aboutme">
+    <h2>About Me</h2>
+    <div class="container">
+      <div>
+        <p>
+          My name is Anastasiia Riabets. I am 25 years old. I have received Associate of Arts degree in Computer Science in December 2021. We have studied HTML, CSS, Java, C++, and Assembly Language. I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
+        </p>
+        <p>
+          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this "sacrifice" will give me an oportunity to have more space in the future.
+        </p>
+      </div>
+      <div>
+        <img src="img/forest.jpg" alt="Anastasiia in forest" width="100%" 
+        max-width="400px">
+      </div>
+    </div>
+  </section>
+  <secion id="contact">
+    <ul>
+      <li>
+        <img src="img/icons/phone.png" alt="Phone Icon">
+        323-823-5440
+      </li>
+      <li>
+        <a href="mailto:anastasiia.ria@gmail.com">
+          <img src="img/icons/mail.png" alt="Mail Icon">
+          anastasiia.ria@gmail.com
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/anastasiia-ria">
+          <img src="img/icons/github.png" alt="GitHub Icon">
+          anastasiia-ria
+        </a>
+      </li>
+      <li>
+        <img src="img/icons/pin.png" alt="Pin Icon">
+        Portland, OR
+      </li>
+    </ul>
+  </secion>
 </body>
 </html>
