update projects section styles, organize css

--- a/index.html
+++ b/index.html
@@ -37,31 +37,38 @@
     </div>
   </section>
   <section id="projects">
+    <h2>Projects</h2>
     <div class="container">
-      <div id="shelter">
-        <div class="overlay">
-          <a href="https://anastasiia-ria.github.io/animal-shelter/">
-            <h3>Animal Shelter</h3>
-            <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages.</p>
-          </a>
-        </div>
+      <div class="project_text">
+        <h3>Animal Shelter</h3>
+        <a href="https://anastasiia-ria.github.io/animal-shelter/">GitHub Page</a>
       </div>
-      <div id="design">
+      <div id="shelter" class="active">
         <div class="overlay">
-          <a href="https://anastasiia-ria.github.io/interior-design/">
-            <h3>Interior Design</h3>
-            <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
-          </a>
+          <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages.</p>
         </div>
       </div>
     </div>
-    
-    <div id="pets">
-      <div class="overlay">
-        <a href="https://anastasiia-ria.github.io/pet/">
-          <h3>Pets</h3>
+    <div class="container">
+      <div id="design" class="active">
+        <div class="overlay">
+          <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
+        </div>
+      </div>
+      <div>
+        <h3>Interior Design</h3>
+        <a href="https://anastasiia-ria.github.io/interior-design/">GitHub Page</a>
+      </div>
+    </div>
+    <div class="container">
+      <div>
+        <h3>Pets</h3>
+        <a href="https://anastasiia-ria.github.io/pet/">GitHub Page</a>
+      </div>
+      <div id="pets" class="active">
+        <div class="overlay">
           <p>Pets website describes mine and Riley's pets, provides their pictures and some facts. It uses HTML and CSS languages.</p>
-        </a>
+        </div>
       </div>
     </div>
   </section>
@@ -73,7 +80,7 @@
           My name is Anastasiia Riabets. I am 25 years old. I have received Associate of Arts degree in Computer Science in December 2021. We have studied HTML, CSS, Java, C++, and Assembly Language. I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
         </p>
         <p>
-          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this "sacrifice" will give me an oportunity to have more space in the future.
+          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this <em>sacrifice</em> will give me an oportunity to have more space in the future.
         </p>
       </div>
       <div>
