add styles to the contact menu

--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
   <secion id="contact">
     <ul>
       <li>
-        <img src="img/icons/phone.png" alt="Phone Icon">
+        <img src="img/icons/phone.png" width="20px" alt="Phone Icon">
         323-823-5440
       </li>
       <li>
         <a href="mailto:anastasiia.ria@gmail.com">
-          <img src="img/icons/mail.png" alt="Mail Icon">
+          <img src="img/icons/mail.png" width="20px" alt="Mail Icon">
           anastasiia.ria@gmail.com
         </a>
       </li>
       <li>
         <a href="https://github.com/anastasiia-ria">
-          <img src="img/icons/github.png" alt="GitHub Icon">
+          <img src="img/icons/github.png" width="20px" alt="GitHub Icon">
           anastasiia-ria
         </a>
       </li>
       <li>
-        <img src="img/icons/pin.png" alt="Pin Icon">
+        <img src="img/icons/pin.png" width="15px" alt="Pin Icon">
         Portland, OR
       </li>
     </ul>
