add animation for hovered items

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="container">
+      <span id="hover"><img src="img/icons/direction.png" width="60px"></span>
       <div class="project_text">
         <h3>Animal Shelter</h3>
         <a href="https://anastasiia-ria.github.io/animal-shelter/">GitHub Page</a>
@@ -50,18 +51,18 @@
       </div>
     </div>
     <div class="container">
+      <div class="project_text">
+        <h3>Interior Design</h3>
+        <a href="https://anastasiia-ria.github.io/interior-design/">GitHub Page</a>
+      </div>
       <div id="design" class="active">
         <div class="overlay">
           <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
         </div>
       </div>
-      <div>
-        <h3>Interior Design</h3>
-        <a href="https://anastasiia-ria.github.io/interior-design/">GitHub Page</a>
-      </div>
     </div>
     <div class="container">
-      <div>
+      <div class="project_text">
         <h3>Pets</h3>
         <a href="https://anastasiia-ria.github.io/pet/">GitHub Page</a>
       </div>
