add floating icons and clean up code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/styles.css"> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +33,27 @@
         </li>
       </ul>
     </div>
+    <div id="icons">
+      <ul>
+        <li>
+          <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
+            <img src="img/icons/mail.png" width="20px" alt="Mail Icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/anastasiia-ria" target="_blank">
+            <img src="img/icons/github.png" width="40px" alt="GitHub Icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/anastasiia_ri/" target="_blank">
+            <img src="img/icons/instagram.png" width="20px" alt="Instagram Icon">
+          </a>
+        </li>
+      </ul>
+    </div>
   </header>
+
   <section id="short_disc">
     <div>
       <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="100%" 
@@ -36,13 +63,14 @@
       <p>> Hi!<br>> My name is Anastasiia<br>> I am a student at Epicodus<br>> Here are some things<br>> about me <span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span></p>
     </div>
   </section>
+
   <section id="projects">
     <h2>Projects</h2>
     <div class="container">
       <span id="hover"><img src="img/icons/direction.png" width="60px"></span>
       <div class="project_text">
         <h3>Animal Shelter</h3>
-        <a href="https://anastasiia-ria.github.io/animal-shelter/">GitHub Page</a>
+        <a href="https://anastasiia-ria.github.io/animal-shelter/ target="_blank"">GitHub Page</a>
       </div>
       <div id="shelter" class="active">
         <div class="overlay">
@@ -53,7 +81,7 @@
     <div class="container">
       <div class="project_text">
         <h3>Interior Design</h3>
-        <a href="https://anastasiia-ria.github.io/interior-design/">GitHub Page</a>
+        <a href="https://anastasiia-ria.github.io/interior-design/ target="_blank"">GitHub Page</a>
       </div>
       <div id="design" class="active">
         <div class="overlay">
@@ -64,7 +92,7 @@
     <div class="container">
       <div class="project_text">
         <h3>Pets</h3>
-        <a href="https://anastasiia-ria.github.io/pet/">GitHub Page</a>
+        <a href="https://anastasiia-ria.github.io/pet/ target="_blank"">GitHub Page</a>
       </div>
       <div id="pets" class="active">
         <div class="overlay">
@@ -73,12 +101,13 @@
       </div>
     </div>
   </section>
+
   <section id="aboutme">
     <h2>About Me</h2>
     <div class="container">
       <div>
         <p>
-          My name is Anastasiia Riabets. I am 25 years old. I have received Associate of Arts degree in Computer Science in December 2021. We have studied HTML, CSS, Java, C++, and Assembly Language. I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
+          My name is <strong>Anastasiia Riabets</strong>. I am 25 years old. I have received Associate of Arts degree in Computer Science in December 2021. I have learned HTML, CSS, Java, C++, and Assembly Language there. I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
         </p>
         <p>
           I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this <em>sacrifice</em> will give me an oportunity to have more space in the future.
@@ -90,6 +119,7 @@
       </div>
     </div>
   </section>
+
   <secion id="contact">
     <ul>
       <li>
@@ -97,19 +127,19 @@
         323-823-5440
       </li>
       <li>
-        <a href="mailto:anastasiia.ria@gmail.com">
+        <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
           <img src="img/icons/mail.png" width="20px" alt="Mail Icon">
           anastasiia.ria@gmail.com
         </a>
       </li>
       <li>
-        <a href="https://github.com/anastasiia-ria">
-          <img src="img/icons/github.png" width="20px" alt="GitHub Icon">
+        <a href="https://github.com/anastasiia-ria" target="_blank">
+          <img src="img/icons/github.png" width="40px" alt="GitHub Icon">
           anastasiia-ria
         </a>
       </li>
       <li>
-        <img src="img/icons/pin.png" width="15px" alt="Pin Icon">
+        <img src="img/icons/pin.png" width="30px" alt="Pin Icon">
         Portland, OR
       </li>
     </ul>
