update design of the projects section and icons

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       <ul>
         <li>
           <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
-            <img src="img/icons/mail.png" width="20px" alt="Mail Icon">
+            <img src="img/icons/mail_gr.png" max-width="35px" alt="Mail Icon">
           </a>
         </li>
         <li>
           <a href="https://github.com/anastasiia-ria" target="_blank">
-            <img src="img/icons/github.png" width="40px" alt="GitHub Icon">
+            <img src="img/icons/github_gr.png" max-width="35px" alt="GitHub Icon">
           </a>
         </li>
         <li>
           <a href="https://www.instagram.com/anastasiia_ri/" target="_blank">
-            <img src="img/icons/instagram.png" width="20px" alt="Instagram Icon">
+            <img src="img/icons/instagram_gr.png" max-width="35px" alt="Instagram Icon">
           </a>
         </li>
       </ul>
@@ -59,38 +59,38 @@
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
+    <h2><span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>Projects</h2>
     <div class="container">
-      <span id="hover"><img src="img/icons/direction.png" width="60px"></span>
+      <span id="hover"><img src="img/icons/direction_gr.png" width="60px"></span>
       <div class="project_text">
-        <h3>Animal Shelter</h3>
-        <a href="https://anastasiia-ria.github.io/animal-shelter/ target="_blank"">GitHub Page</a>
+        <h3>> Animal Shelter</h3>
+        <a href="https://anastasiia-ria.github.io/animal-shelter/ target="_blank"">> GitHub Page</a>
       </div>
       <div id="shelter" class="active">
         <div class="overlay">
-          <p>Animal Shelter website shows images and short description of different pets. It uses HTML and CSS languages.</p>
+          <p><strong>Animal Shelter</strong> website shows images and short description of different pets. It uses HTML and CSS languages.</p>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="project_text">
-        <h3>Interior Design</h3>
-        <a href="https://anastasiia-ria.github.io/interior-design/ target="_blank"">GitHub Page</a>
+        <h3>> Interior Design</h3>
+        <a href="https://anastasiia-ria.github.io/interior-design/ target="_blank"">> GitHub Page</a>
       </div>
       <div id="design" class="active">
         <div class="overlay">
-          <p>Interior Design website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
+          <p><strong>Interior Design</strong> website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="project_text">
-        <h3>Pets</h3>
-        <a href="https://anastasiia-ria.github.io/pet/ target="_blank"">GitHub Page</a>
+        <h3>> Pets</h3>
+        <a href="https://anastasiia-ria.github.io/pet/ target="_blank"">> GitHub Page</a>
       </div>
       <div id="pets" class="active">
         <div class="overlay">
-          <p>Pets website describes mine and Riley's pets, provides their pictures and some facts. It uses HTML and CSS languages.</p>
+          <p><strong>Pets</strong> website describes mine and Riley's pets, provides their pictures and some facts. It uses HTML and CSS languages.</p>
         </div>
       </div>
     </div>
@@ -117,23 +117,23 @@
   <secion id="contact">
     <ul>
       <li>
-        <img src="img/icons/phone.png" width="20px" alt="Phone Icon">
+        <img src="img/icons/phone.png" max-width="35px" alt="Phone Icon">
         323-823-5440
       </li>
       <li>
         <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
-          <img src="img/icons/mail.png" width="20px" alt="Mail Icon">
+          <img src="img/icons/mail.png" max-width="35px" alt="Mail Icon">
           anastasiia.ria@gmail.com
         </a>
       </li>
       <li>
         <a href="https://github.com/anastasiia-ria" target="_blank">
-          <img src="img/icons/github.png" width="40px" alt="GitHub Icon">
+          <img src="img/icons/github.png" max-width="35px" alt="GitHub Icon">
           anastasiia-ria
         </a>
       </li>
       <li>
-        <img src="img/icons/pin.png" width="30px" alt="Pin Icon">
+        <img src="img/icons/pin.png" max-width="35px" alt="Pin Icon">
         Portland, OR
       </li>
     </ul>
