replace icons, add border radius to images, change icons layout

--- a/index.html
+++ b/index.html
@@ -27,34 +27,34 @@
         </li>
       </ul>
     </div>
+  </header>
+
+  <section id="short_disc">
     <div id="icons">
       <ul>
         <li>
           <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
-            <img src="img/icons/mail_gr.png" max-width="35px" alt="Mail Icon">
+            <img src="img/icons/mail.png" alt="Mail Icon">
           </a>
         </li>
         <li>
           <a href="https://github.com/anastasiia-ria" target="_blank">
-            <img src="img/icons/github_gr.png" max-width="35px" alt="GitHub Icon">
+            <img src="img/icons/github.png" alt="GitHub Icon">
           </a>
         </li>
         <li>
           <a href="https://www.instagram.com/anastasiia_ri/" target="_blank">
-            <img src="img/icons/instagram_gr.png" max-width="35px" alt="Instagram Icon">
+            <img src="img/icons/instagram.png" alt="Instagram Icon">
           </a>
         </li>
       </ul>
     </div>
-  </header>
-
-  <section id="short_disc">
     <div>
       <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="100%" 
       max-width="400px">
     </div>
     <div class="terminal">
-      <p>> Hi!<br>> My name is Anastasiia<br>> I am a student at Epicodus<br>> Here are some things<br>> about me <span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span></p>
+      <p>> Hi!<br>> My name is Anastasiia.<br>> I am a student at Epicodus.<br>> Here are some things<br>> about me <span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span></p>
     </div>
   </section>
 
@@ -71,6 +71,7 @@
           <p><strong>Animal Shelter</strong> website shows images and short description of different pets. It uses HTML and CSS languages.</p>
         </div>
       </div>
+      <span class="border-l"></span>
     </div>
     <div class="container">
       <div class="project_text">
@@ -82,6 +83,7 @@
           <p><strong>Interior Design</strong> website shows different stages of work done by some Decorator. It uses HTML and CSS languages.</p>
         </div>
       </div>
+      <span class="border-r"></span>
     </div>
     <div class="container">
       <div class="project_text">
@@ -97,18 +99,20 @@
   </section>
 
   <section id="aboutme">
-    <h2>About Me</h2>
+    <h2><span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>About Me</h2>
     <div class="container">
-      <div>
+      <div class="terminal_wh">
         <p>
-          My name is <strong>Anastasiia Riabets</strong>. I am 25 years old. I have received Associate of Arts degree in Computer Science in December 2021. I have learned HTML, CSS, Java, C++, and Assembly Language there. I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
+          My name is <strong>Anastasiia Riabets</strong>. I am 25 years old. I have received Associate of Arts degree in Computer Science in December 2021. I have learned HTML, CSS, Java, C++, and Assembly Language there.</p>
+        <p>
+          I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
         </p>
         <p>
-          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this <em>sacrifice</em> will give me an oportunity to have more space in the future.
+          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this <em>sacrifice</em> will give me an oportunity to have more space in the future<span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>
         </p>
       </div>
       <div>
-        <img src="img/forest.jpg" alt="Anastasiia in forest" width="100%" 
+        <img src="img/emoji.png" alt="Anastasiia's Emoji" width="100%" 
         max-width="400px">
       </div>
     </div>
@@ -117,23 +121,23 @@
   <secion id="contact">
     <ul>
       <li>
-        <img src="img/icons/phone.png" max-width="35px" alt="Phone Icon">
+        <img src="img/icons/phone.png" height="30px" alt="Phone Icon">
         323-823-5440
       </li>
       <li>
         <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
-          <img src="img/icons/mail.png" max-width="35px" alt="Mail Icon">
+          <img src="img/icons/mail.png" width="30px" alt="Mail Icon">
           anastasiia.ria@gmail.com
         </a>
       </li>
       <li>
         <a href="https://github.com/anastasiia-ria" target="_blank">
-          <img src="img/icons/github.png" max-width="35px" alt="GitHub Icon">
+          <img src="img/icons/github.png" width="30px" alt="GitHub Icon">
           anastasiia-ria
         </a>
       </li>
       <li>
-        <img src="img/icons/pin.png" max-width="35px" alt="Pin Icon">
+        <img src="img/icons/pin.png" height="30px" alt="Pin Icon">
         Portland, OR
       </li>
     </ul>
