add style to contact info part, add contact form

--- a/index.html
+++ b/index.html
@@ -120,28 +120,43 @@
   </section>
 
   <secion id="contact">
-    <ul>
-      <li>
-        <img src="img/icons/phone.png" height="30px" alt="Phone Icon">
-        323-823-5440
-      </li>
-      <li>
-        <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
-          <img src="img/icons/mail.png" width="30px" alt="Mail Icon">
-          anastasiia.ria@gmail.com
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/anastasiia-ria" target="_blank">
-          <img src="img/icons/github.png" width="30px" alt="GitHub Icon">
-          anastasiia-ria
-        </a>
-      </li>
-      <li>
-        <img src="img/icons/pin.png" height="30px" alt="Pin Icon">
-        Portland, OR
-      </li>
-    </ul>
+    <div class="container">
+      <div id="contacts">
+        <ul class="title">
+          <li> 
+            <span id="gr_circle">
+              <img src="img/memoji_smile.png" width="50px" alt="Anastasiia's Memoji">
+            </span>
+          </li>
+          <li>phone</li>
+          <li>email</li>
+          <li>github</li>
+          <li>location</li>
+        </ul>
+        <ul class="info">
+          <li id="name">Anastasiia Riabets</li>
+          <li>(323) 823-5440</li>
+          <li>
+            <a href="mailto:anastasiia.ria@gmail.com" target="_blank">
+              anastasiia.ria@gmail.com
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/anastasiia-ria" target="_blank">
+              anastasiia-ria
+            </a>
+          </li>
+          <li>Portland, OR</li>
+        </ul>
+      </div>
+      <div>
+        <form>
+          <input type="text" placeholder="Name">
+          <input type="text" placeholder="Email">
+          <textarea name="Message" id="Message" rows="5"></textarea>
+        </form>
+      </div>
+    </div>
   </secion>
 </body>
 </html>
