add links to github repositories in projects section, even out width of the sections, fix floating elements' position

--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
       <span id="pointer"><img src="img/icons/direction_gr.png" width="60px"></span>
       <div class="project_text">
         <h3>> Animal Shelter</h3>
-        <a href="https://anastasiia-ria.github.io/animal-shelter/" target="_blank"> GitHub Page</a>
+        <ol>
+          <li>
+            <a href="https://anastasiia-ria.github.io/animal-shelter/" target="_blank"> GitHub Page</a>
+          </li>
+          <li>
+            <a href="https://github.com/anastasiia-ria/animal-shelter" target="_blank"> GitHub Repository</a>
+          </li>
+        </ol>
       </div>
       <div id="shelter" class="active" tabindex="1">
         <div class="overlay" tabindex="1">
@@ -77,7 +84,14 @@
     <div class="container">
       <div class="project_text">
         <h3>> Interior Design</h3>
-        <a href="https://anastasiia-ria.github.io/interior-design/" target="_blank"> GitHub Page</a>
+        <ol>
+          <li>
+            <a href="https://anastasiia-ria.github.io/interior-design/" target="_blank"> GitHub Page</a>
+          </li>
+          <li>
+            <a href="https://github.com/anastasiia-ria/interior-design" target="_blank"> GitHub Repository</a>
+          </li>
+        </ol>
       </div>
       <div id="design" class="active" tabindex="1">
         <div class="overlay" tabindex="1">
@@ -89,7 +103,14 @@
     <div class="container">
       <div class="project_text">
         <h3>> Pets</h3>
-        <a href="https://anastasiia-ria.github.io/pet/" target="_blank"> GitHub Page</a>
+        <ol>
+          <li>
+            <a href="https://anastasiia-ria.github.io/pet/" target="_blank"> GitHub Page</a>
+          </li>
+          <li>
+            <a href="https://github.com/anastasiia-ria/pet" target="_blank"> GitHub Repository</a>
+          </li>
+        </ol>
       </div>
       <div id="pets" class="active" tabindex="1">
         <div class="overlay" tabindex="1">
