change dots attributes from id to class

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="100%" max-width="400px">
       </div>
       <div class="terminal">
-        <p>> hi!<br>> my name is Anastasiia.<br>> i am a student at Epicodus.<br>> here are some things<br>> about me<span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span></p>
+        <p>> hi!<br>> my name is Anastasiia.<br>> i am a student at Epicodus.<br>> here are some things<br>> about me<span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span></p>
       </div>
     </div>
   </section>
 
   <section id="projects">
-    <h2><span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>Projects</h2>
+    <h2><span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>Projects</h2>
     <div class="container">
       <span id="pointer"><img src="img/icons/direction_gr.png" width="60px"></span>
       <div class="project_text">
@@ -121,7 +121,7 @@
   </section>
 
   <section id="aboutme">
-    <h2><span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>About Me</h2>
+    <h2><span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>About Me</h2>
     <div class="container">
       <div class="terminal_wh">
         <p>
@@ -130,7 +130,7 @@
           I had an option to continue studing and get Bachelor degree, but I've decided to go to bootcamp since I wanted to work on hands-on projects, prepare for interviews, and go through internship. 
         </p>
         <p>
-          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this <em>sacrifice</em> will give me an oportunity to have more space in the future<span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>
+          I like solving sudokus, travelling, coding, and playing piano. Unfortunately, I had to give up my piano space to place a new table for the remote study. Hopefuly, this <em>sacrifice</em> will give me an oportunity to have more space in the future<span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>
         </p>
       </div>
       <div>
@@ -139,7 +139,7 @@
     </div>
   </section>
   <secion id="contact">
-    <h2><span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>Contact</h2>
+    <h2><span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>Contact</h2>
     <div class="container">
       <div id="contacts">
         <div id="contact_img">
