--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
       </div>
       <div>
-        <img src="img/anastasiia.jpg" alt="Anastasiia Riabets" width="100%" max-width="400px">
+        <img src="img/anastasiia.jpg" alt="Anastasiia Riabets">
       </div>
       <div class="terminal">
         <p>> hi!<br>> my name is Anastasiia.<br>> i am a student at Epicodus.<br>> here are some things<br>> about me<span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span></p>
@@ -62,7 +62,7 @@
   <section id="projects">
     <h2><span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>Projects</h2>
     <div class="container">
-      <span id="pointer"><img src="img/icons/direction_gr.png" width="60px"></span>
+      <span id="pointer"><img src="img/icons/direction_gr.png" width="60px" alt="Pointer Icon"></span>
       <div class="project_text">
         <h3>> Animal Shelter</h3>
         <ol>
@@ -134,7 +134,7 @@
         </p>
       </div>
       <div>
-        <img src="img/emoji.png" alt="Anastasiia's Emoji" width="100%" max-width="400px">
+        <img src="img/emoji.png" alt="Anastasiia's Emoji">
       </div>
     </div>
   </section>
